# AI-python-chatbot

./: main.py  pyproject.toml
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
